<resources>
    <string name="app_name">Фоторамка</string>
    <string name="empty_inside_weather">температура: <font color='#FF0000'>00.00 ℃</font>\nвлажность:&#160;&#160;&#160;<font color='#5D4BD8'>00%</font></string>
    <string name="photo">Фото</string>
    <string name="weather">Погода</string>
    <string name="settings">Настройки</string>
    <string name="default_date_and_time">01.01.2000\n00:00</string>
    <string name="loading">Загрузка погоды…</string>
    <string name="loading_outside_weather">На улице\nЗагрузка…</string>
    <string name="weather_icon">Иконка погоды</string>
    <string name="save">Сохранить</string>
    <string name="reset_gps">Обновить геопозицию</string>
    <string name="slide_show_delay">Смена фото, с.</string>
    <string name="update_weather_delay">Обновление погоды, м.</string>
    <string name="city_for_weather">Город для погоды,\nесли нет геопозиции</string>
    <string name="empty_temperature_in">t in: <font color='#FF0000'>00.00 ℃</font></string>
    <string name="empty_temperature_out">t out: <font color='#FF0000'>00.00 ℃</font></string>
    <string name="Friday">Пятница</string>
    <string name="shuffle_photo">Перемешивать фото</string>
    <string name="time_off">Время снижения яркости (ЧЧ:MM)</string>
    <string name="time_on">Время повышения яркости (ЧЧ:MM)</string>
    <string name="time_off_hint">00:00</string>
    <string name="time_on_hint">06:00</string>
    <string name="update_weather_delay_hint">10</string>
    <string name="slide_show_delay_hint">50</string>
    <string name="percent_brightness_off_hint">0</string>
    <string name="percent_brightness_on_hint">80</string>
    <string name="percent">%</string>
    <string-array name="cities">
        <item>Пермь</item>
        <item>Шерья</item>
    </string-array>
</resources>