<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/photoInWeather"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/photo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leftLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomLine"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/bottomLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-2dp"
        android:background="@drawable/colored_down_border_view_background"
        app:layout_constraintBottom_toBottomOf="@id/insideWeather"
        app:layout_constraintEnd_toStartOf="@+id/leftLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <View
        android:id="@+id/leftLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-5dp"
        android:background="@drawable/colored_left_border_view_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/outsideWeather"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <TextView
        android:id="@+id/insideWeather"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/droid_sans_mono"
        android:text="@string/empty_inside_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/default_date_and_time"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/bottomLine"
        app:layout_constraintEnd_toStartOf="@id/leftLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftLine"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/weatherIconDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loading"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/leftLine"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />

    <TextView
        android:id="@+id/outsideWeather"
        android:layout_width="186dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/droid_sans_mono"
        android:text="@string/loading_outside_weather"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIconDescription" />

    <ProgressBar
        android:id="@+id/photoProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leftLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/photoInWeather" />

    <TextView
        android:id="@+id/currentDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        app:layout_constraintBottom_toBottomOf="@+id/bottomLine"
        app:layout_constraintEnd_toStartOf="@+id/leftLine"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottomLine2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toTopOf="@id/outsideWeather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftLine"
        app:layout_constraintTop_toBottomOf="@id/weatherIconDescription">

    </View>

</androidx.constraintlayout.widget.ConstraintLayout>