<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/photoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/weatherImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weather" />

    <ImageView
        android:id="@+id/settingsImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weatherImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <TextView
        android:id="@+id/photoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/photo"
        app:layout_constraintEnd_toEndOf="@+id/photoImage"
        app:layout_constraintStart_toStartOf="@+id/photoImage"
        app:layout_constraintTop_toBottomOf="@+id/photoImage" />

    <TextView
        android:id="@+id/weatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/weather"
        app:layout_constraintEnd_toEndOf="@+id/weatherImage"
        app:layout_constraintStart_toStartOf="@+id/weatherImage"
        app:layout_constraintTop_toBottomOf="@+id/weatherImage" />

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="@+id/settingsImage"
        app:layout_constraintStart_toStartOf="@+id/settingsImage"
        app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

</androidx.constraintlayout.widget.ConstraintLayout>